tests/ui/resolve/suggest-unresolve-149402.nightly.stderr
error[E0433]: failed to resolve: use of undeclared type `Complete`
  --> $DIR/suggest-unresolve-149402.rs:7:12
   |
LL |     x.push(Complete::Item { name: "hello" });
   |            ^^^^^^^^ use of undeclared type `Complete`
   |
help: there is an enum variant `std::ops::CoroutineState::Complete`; try using the variant's enum
   |
LL -     x.push(Complete::Item { name: "hello" });
LL +     x.push(std::ops::CoroutineState::Item { name: "hello" });
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
